--- a/src/styles.css
+++ b/src/styles.css
@@ -28,16 +28,21 @@ body {
  .full-width {
   width: 100%;
  }
- .login-card {
-  max-width: 400px;
-  margin: 50px auto;
-  padding: 20px;
- }
  .details-card {
   max-width: 600px;
-  margin: 20px auto;
   padding: 20px;
+  background-color: #ffffff;
+  color: #333;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  }
-
-
+ .details-card mat-icon {
+  margin-right: 8px;
+ }
+ .login-card {
+  max-width: 400px;
+  padding: 20px;
+  background-color: #ffffff;
+  color: #333;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+ }
 
