--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,12 @@ body {
   padding: 20px;
   background-color: #ffffff;
   color: #333;
+  text-align: center;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  }
+.card-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
